--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,11 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-
 	<!-- The Basics -->
 
 	<groupId>net.tanesha.recaptcha4j</groupId>
 	<artifactId>recaptcha4j</artifactId>
-	<version>0.0.8</version>
+	<version>0.0.8-kohsuke-1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<dependencies>
@@ -30,7 +29,6 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<configuration>
-					<tagBase>https://recaptcha4j.googlecode.com/svn/tags</tagBase>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -59,14 +57,6 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>changelog-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>taglist-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</reporting>
@@ -119,27 +109,20 @@
 		<url>http://code.google.com/p/recaptcha4j/issues/list</url>
 	</issueManagement>
 
-	<scm>
-		<connection>scm:svn:http://recaptcha4j.googlecode.com/svn/trunk/</connection>
-		<developerConnection>scm:svn:https://recaptcha4j.googlecode.com/svn/trunk/</developerConnection>
-		<url>http://code.google.com/p/recaptcha4j/source/browse/#svn/trunk/recaptcha4j</url>
-	</scm>
+    <scm>
+      <connection>scm:git:git@github.com/kohsuke/${project.artifactId}.git</connection>
+      <developerConnection>scm:git:ssh://git@github.com/kohsuke/${project.artifactId}.git</developerConnection>
+    </scm>
 
 	<distributionManagement>
-		<repository>
-			<id>sonatype-nexus-staging</id>
-			<name>Nexus Release Repository</name>
-			<url>http://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-		</repository>
-		<snapshotRepository>
-			<id>sonatype-nexus-snapshots</id>
-			<name>Sonatype Nexus Snapshots</name>
-			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
-		</snapshotRepository>
-		<site>
-			<id>taneshanet-local-sipservlite</id>
-			<url>file:///var/www/tanesha.net/projects/recaptcha4j</url>
-		</site>
+      <repository>
+        <id>maven.jenkins-ci.org</id>
+        <url>http://maven.jenkins-ci.org:8081/content/repositories/releases</url>
+      </repository>
+      <snapshotRepository>
+        <id>maven.jenkins-ci.org</id>
+        <url>http://maven.jenkins-ci.org:8081/content/repositories/snapshots</url>
+      </snapshotRepository>
 	</distributionManagement>
 
 	<profiles>
