--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
 	<groupId>net.tanesha.recaptcha4j</groupId>
 	<artifactId>recaptcha4j</artifactId>
-	<version>0.0.8-kohsuke-1</version>
+	<version>0.0.8-kohsuke-2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<dependencies>
